welcome.lessons.welcome.array.basics.Array1.scala.code

def met_tableau_couleur():Array[Color] = 
{
  var T = new Array[Color](6)
	for (i <- 0 to 5 )
			{T(i)= getCouleurSol() }
  avance()
  return T
}

def coloriage() 
{for (i <-0 to 5)
		{setCouleurBrosse(T.(i));
    baisseBrosse;
    leveBrosse;
    avance();}}

  
  override def run() {
    var T:Array[Color] = met_tableau_couleur()
    for (i <-0 to 4)
    {droite();
    avance();
    droite();
    coloriage();
    }}